Add DTOs for user management and authentication processes